# docstringFormatter

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  TEST-requirements.txt  pyproject.toml
SampleTextfile/: TextOutput_DefaultSetting_at_main().txt  TextOutput_OriginalSentenceSetting_at_main().txt
TEST/: __init__.py
docstringFormatter/: docstringFormatter.py
src/docstringFormatter/: __init__.py  _version.py  docstringFormatter.py
